# scry

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: DIRECTION.md  authoring-il2cpp.md  authoring-profiles.md
examples/seaofstars/: README.md  map.json  walkthrough.md
src/: aob.rs  engine.rs  error.rs  lib.rs  profile.rs  resolver.rs
src/authoring/: il2cpp.rs  mod.rs
src/backend/: linux.rs  mod.rs  pe.rs  windows.rs
tests/: collection.rs  il2cpp_convert.rs  poll_loop.rs  read_chain.rs  resolve_profile.rs
tests/common/: mod.rs
